fix: input unselectable on Safari

--- a/packages/react/src/components/SheetOverlay/index.css
+++ b/packages/react/src/components/SheetOverlay/index.css
@@ -2,7 +2,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  user-select: none;
   outline-style: none;
 }
 
